--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -9,15 +9,15 @@
     <title>【最強AI搭載】無料で遊べるリバーシ（オセロ）ゲーム - ブラウザで今すぐ対戦！</title>
     <meta name="description" content="8段階の強さから選べる最強AIを搭載した無料のリバーシ（オセロ）ゲームです。登録不要、インストール不要でブラウザですぐにプレイ可能。CPUとの対戦や棋譜再生機能も充実。あなたの挑戦をお待ちしています！">
     <meta name="keywords" content="リバーシ, オセロ, ゲーム, 無料, AI, CPU, 対戦, ブラウザゲーム, オンライン, 思考エンジン, 定石, 棋譜">
-    <link rel="canonical" href="https://example.com/reversi-game/"> <!-- TODO: あなたのウェブサイトの正式なURLに置き換えてください -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- TODO: favicon.icoを設置してください -->
+    <link rel="canonical" href="https://core-calmdust.github.io/aicoding/reversi_v3.html">
+    <link rel="icon" href="https://core-calmdust.github.io/aicoding/images/favicon.ico" type="image/x-icon">
 
     <!-- 2. OGP (Open Graph Protocol) タグ - FacebookやLINEなどでシェアされた際に表示 -->
     <meta property="og:title" content="【最強AI搭載】無料で遊べるリバーシ（オセロ）ゲーム">
     <meta property="og:description" content="8段階の強さから選べる最強AI搭載！ブラウザで今すぐプレイできる無料リバーシゲーム。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://example.com/reversi-game/"> <!-- TODO: あなたのウェブサイトの正式なURLに置き換えてください -->
-    <meta property="og:image" content="https://example.com/reversi-ogp.png"> <!-- TODO: シェアされた際に表示する画像のURLに置き換えてください (推奨サイズ: 1200x630px) -->
+    <meta property="og:url" content="https://core-calmdust.github.io/aicoding/reversi_v3.html">
+    <meta property="og:image" content="https://core-calmdust.github.io/aicoding/images/reversi-ogp.png">
     <meta property="og:site_name" content="無料リバーシゲーム">
     <meta property="og:locale" content="ja_JP">
 
@@ -25,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="【最強AI搭載】無料で遊べるリバーシ（オセロ）ゲーム">
     <meta name="twitter:description" content="8段階の強さから選べる最強AI搭載！ブラウザで今すぐプレイできる無料リバーシゲーム。">
-    <meta name="twitter:image" content="https://example.com/reversi-ogp.png"> <!-- TODO: OGPと同じ画像のURLに置き換えてください -->
+    <meta name="twitter:image" content="https://core-calmdust.github.io/aicoding/images/reversi-ogp.png"> 
 
     <!-- ▲▲▲ SEO/OGP関連のメタデータここまで ▲▲▲ -->
     
