--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -626,9 +626,9 @@
                             <option value="1">レベル1</option> <option value="2">レベル2</option> <option value="3">レベル3</option>
                             <option value="4">レベル4</option> <option value="5">レベル5</option> <option value="6">レベル6</option>
                             <option value="7">レベル7</option>
-                            <option value="8">レベル8</option>
+                            <option value="8" selected>レベル8</option>
                             <option value="9">レベル8+</option>
-                            <option value="10" selected>レベル9</option>
+                            <option value="10">レベル9</option>
                         </select>
                     </div>
                     <div class="test-cpu-selector">
@@ -636,9 +636,9 @@
                         <select id="cpu2-level">
                             <option value="1">レベル1</option> <option value="2">レベル2</option> <option value="3">レベル3</option>
                             <option value="4">レベル4</option> <option value="5">レベル5</option> <option value="6">レベル6</option>
-                            <option value="7" selected>レベル7</option>
+                            <option value="7">レベル7</option>
                             <option value="8">レベル8</option>
-                            <option value="9">レベル8+</option>
+                            <option value="9" selected>レベル8+</option>
                             <option value="10">レベル9</option>
                         </select>
                     </div>
