--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -640,7 +640,9 @@
             </div>
         </div>
     </div>
-
+// ================================================================= //
+//                           Worker Script                   　      //
+// ================================================================= //
     <script id="research-worker-script" type="javascript/worker">
         // --- 定数定義 ---
         const EMPTY = 0, BLACK = 1, WHITE = 2;
