--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -582,7 +582,7 @@
             
             <section id="evaluation-graph-container">
                 <div id="current-evaluation-display">
-                    <span>評価値: </span>
+                    <span>対戦相手による評価値: </span>
                     <span id="evaluation-value-text">N/A</span>
                 </div>
                  <div id="evaluation-graph-wrapper-outer">
