--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -642,6 +642,9 @@
     </div>
 
     <script id="research-worker-script" type="javascript/worker">
+        // ================================================================= //
+        //                           Worker Script　                         //
+        // ================================================================= //
         // --- 定数定義 ---
         const EMPTY = 0, BLACK = 1, WHITE = 2;
         const BOARD_SIZE = 8;
