--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -266,7 +266,7 @@
 
         /* 【修正】勝ち確時のバーの色を修正 */
         .bar.capped.black { background-color: #777; }
-        .bar.capped.white { background-color: #fff; }
+        .bar.capped.white { background-color: #aaa; }
 
         #evaluation-tooltip {
             position: absolute; display: none; background-color: var(--accent-color); color: white;
