--- a/reversi_v3.html
+++ b/reversi_v3.html
@@ -240,8 +240,10 @@
             height: 100%; font-size: 10px; color: var(--text-muted-color);
             margin-right: 8px; width: 25px; flex-shrink: 0; font-family: 'Roboto', sans-serif;
         }
-        /* 【修正】touch-actionを削除 */
-        #evaluation-graph-wrapper { flex-grow: 1; position: relative; overflow: hidden; cursor: default; }
+        #evaluation-graph-wrapper {
+            flex-grow: 1; position: relative; overflow: hidden; cursor: default;
+            touch-action: none;
+        }
         body.game-over #evaluation-graph-wrapper, body.game-interrupted #evaluation-graph-wrapper { cursor: grab; }
         body.graph-dragging #evaluation-graph-wrapper { cursor: grabbing; }
 
@@ -1671,7 +1673,6 @@ graphWrapperEl.addEventListener('mousedown', (event) => {
 
 const onTouchMove = (e) => {
     if (isDraggingGraph) {
-        e.preventDefault();
         handleGraphScrub(e);
     }
 };
@@ -1683,14 +1684,12 @@ const onTouchEnd = () => {
     window.removeEventListener('touchmove', onTouchMove);
     window.removeEventListener('touchend', onTouchEnd);
 };
-// 【修正】touchstartイベントリスナーの修正
 graphWrapperEl.addEventListener('touchstart', (event) => {
     if (!isGameOver && !document.body.classList.contains('game-interrupted')) return;
-    event.preventDefault(); // ブラウザのデフォルト動作（スクロールなど）をキャンセル
     isDraggingGraph = true;
     document.body.classList.add('graph-dragging');
     handleGraphScrub(event);
-    window.addEventListener('touchmove', onTouchMove, { passive: false });
+    window.addEventListener('touchmove', onTouchMove);
     window.addEventListener('touchend', onTouchEnd);
 });
 
@@ -1935,6 +1934,6 @@ function getValidMoves(currentBoard, player) {
 
 // --- ゲームの初回起動 ---
 resetGame();
-    </script>
+</script>
 </body>
 </html>
