--- a/danmaku-inv.html
+++ b/danmaku-inv.html
@@ -791,6 +791,7 @@
                 drawText(`HI-SCORE: ${highScore}`, canvas.width / 2, 430, 20, '#fff');
                 const startText = (lastInputDevice === 'gamepad') ? "Press Start or any Button to Start" : "Press Enter to Start";
                 drawText(startText, canvas.width / 2, 480, 20, `hsl(180, 100%, 50%)`);
+		drawText("Recommended to play in Chrome", canvas.width / 2, 525, 12, 'rgba(255, 255, 255, 0.7)');
             }
 
             function drawLogo() {
