--- a/danmaku-inv.html
+++ b/danmaku-inv.html
@@ -89,7 +89,12 @@
             <div id="game-container">
                 <canvas id="gameCanvas" aria-label="ゲーム画面"></canvas>
                 <!-- ▼▼▼【追加】▼▼▼ エフェクト切り替えボタン -->
-                <button id="effect-toggle" tabindex="-1" aria-label="エフェクトのオン・オフを切り替える">EFX ON</button>
+            	<button id="effect-toggle" 
+                    tabindex="-1" 
+                    aria-label="エフェクトのオン・オフを切り替える"
+                    title="ブラウザの処理が重たい場合はOFFにしてください">
+		    EFX ON
+            	</button>
                 <!-- ▲▲▲【追加はここまで】▲▲▲ -->
                 <button id="sound-toggle" tabindex="-1" aria-label="サウンドのオン・オフを切り替える">SOUND ON</button>
             </div>
