--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AIコーディングで制作した様々なブラウザゲームを遊べるサイトです。リバーシ、バックギャモン、弾幕シューティングなど、多様なゲームをPCでもスマホでも楽しめます。">
     <title>ゲーム制作＠バイブコーディング</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,12 +14,13 @@
 
     <header>
         <h1>ゲームを選んで遊ぼう！</h1>
+        <p class="subtitle">バイブコーディングで制作したゲームを公開中</p>
     </header>
 
     <main class="game-grid">
         <!-- カード8: DANMAKU INVADER XTREME+ -->
         <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
-            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+">
+            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>DANMAKU INVADER XTREME+</h2>
             </div>
@@ -26,23 +28,23 @@
         
         <!-- カード7: CYBER PONG XTREME+ -->
         <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
-            <img src="./images/pong.png" alt="CYBER PONG XTREME+">
+            <img src="./images/pong.png" alt="CYBER PONG XTREME+" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>CYBER PONG XTREME+</h2>
             </div>
         </a>
         
-        <!-- カード1: リバーシ -->
+        <!-- カード1: リバーシ_v3 -->
         <a href="https://core-calmdust.github.io/aicoding/reversi_v3.html" class="game-card">
-            <img src="./images/reversi_v3.png" alt="リバーシ">
+            <img src="./images/reversi_v3.png" alt="リバーシ" loading="lazy" decoding="async">
             <div class="card-content">
-                <h2>リバーシ</h2>
+                <h2>リバーシ v3</h2>
             </div>
         </a>
 
         <!-- カード2: バックギャモン -->
         <a href="https://core-calmdust.github.io/aicoding/backgammon.html" class="game-card">
-            <img src="./images/backgammon.png" alt="バックギャモン">
+            <img src="./images/backgammon.png" alt="バックギャモン" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>バックギャモン</h2>
             </div>
@@ -50,7 +52,7 @@
 
         <!-- カード3: コネクテッド4 -->
         <a href="https://core-calmdust.github.io/aicoding/connect4.html" class="game-card">
-            <img src="./images/connect4.png" alt="コネクテッド4の画像">
+            <img src="./images/connect4.png" alt="コネクテッド4の画像" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>コネクテッド4</h2>
             </div>
@@ -58,7 +60,7 @@
 
         <!-- カード4: さめが〜め -->
         <a href="https://core-calmdust.github.io/aicoding/samegame/" class="game-card">
-            <img src="./images/samegame.png" alt="さめが〜め">
+            <img src="./images/samegame.png" alt="さめが〜め" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>さめが〜め</h2>
             </div>
@@ -66,7 +68,7 @@
 
         <!-- カード5: 無限数独 -->
         <a href="https://core-calmdust.github.io/aicoding/sudoku/" class="game-card">
-            <img src="./images/sudoku.png" alt="無限数独">
+            <img src="./images/sudoku.png" alt="無限数独" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>無限数独</h2>
             </div>
@@ -74,7 +76,7 @@
 
         <!-- カード6: チェッカー -->
         <a href="https://core-calmdust.github.io/aicoding/checker.html" class="game-card">
-            <img src="./images/checker.png" alt="チェッカー">
+            <img src="./images/checker.png" alt="チェッカー" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>チェッカー</h2>
             </div>
