--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
             <img src="./images/pong.png" alt="CYBER PONG XTREME+" loading="lazy" decoding="async">
             <div class="card-content">
-                <h2>CYBER PONG XTREME+</h2>
+                <h2>CYBER PONG XTREME+📱</h2>
             </div>
         </a>
         
@@ -38,7 +38,7 @@
         <a href="https://core-calmdust.github.io/aicoding/reversi_v3.html" class="game-card">
             <img src="./images/reversi_v3.png" alt="リバーシ" loading="lazy" decoding="async">
             <div class="card-content">
-                <h2>リバーシ v3</h2>
+                <h2>リバーシ v3📱</h2>
             </div>
         </a>
 
