--- a/index.html
+++ b/index.html
@@ -6,77 +6,71 @@
     <meta name="description" content="AIコーディングで制作した様々なブラウザゲームを遊べるサイトです。リバーシ、バックギャモン、弾幕シューティングなど、多様なゲームをPCでもスマホでも楽しめます。">
     <title>ゲーム制作＠バイブコーディング</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <header>
         <h1>ゲームを選んで遊ぼう！</h1>
-        <p class="subtitle">バイブコーディングで制作したゲームを公開中</p>
+        <p class="subtitle">AIコーディングで制作したゲームを公開中</p>
     </header>
 
     <main class="game-grid">
-        <!-- カード8: DANMAKU INVADER XTREME+ -->
+        <!-- ▼▼▼ 最初の4つの画像から loading="lazy" を削除し、拡張子を .webp に変更 ▼▼▼ -->
         <a href="https://core-calmdust.github.io/aicoding/danmaku-inv.html" class="game-card">
-            <img src="./images/danmaku-inv.png" alt="DANMAKU INVADER XTREME+" loading="lazy" decoding="async">
+            <img src="./images/danmaku-inv.webp" alt="DANMAKU INVADER XTREME+">
             <div class="card-content">
                 <h2>DANMAKU INVADER XTREME+</h2>
             </div>
         </a>
         
-        <!-- カード7: CYBER PONG XTREME+ -->
         <a href="https://core-calmdust.github.io/aicoding/pong.html" class="game-card">
-            <img src="./images/pong.png" alt="CYBER PONG XTREME+" loading="lazy" decoding="async">
+            <img src="./images/pong.webp" alt="CYBER PONG XTREME+">
             <div class="card-content">
-                <h2>CYBER PONG XTREME+📱</h2>
+                <h2>CYBER PONG XTREME+</h2>
             </div>
         </a>
         
-        <!-- カード1: リバーシ_v3 -->
         <a href="https://core-calmdust.github.io/aicoding/reversi_v3.html" class="game-card">
-            <img src="./images/reversi_v3.png" alt="リバーシ" loading="lazy" decoding="async">
+            <img src="./images/reversi_v3.webp" alt="リバーシ">
             <div class="card-content">
-                <h2>リバーシ v3📱</h2>
+                <h2>リバーシ</h2>
             </div>
         </a>
 
-        <!-- カード2: バックギャモン -->
         <a href="https://core-calmdust.github.io/aicoding/backgammon.html" class="game-card">
-            <img src="./images/backgammon.png" alt="バックギャモン" loading="lazy" decoding="async">
+            <img src="./images/backgammon.webp" alt="バックギャモン">
             <div class="card-content">
                 <h2>バックギャモン</h2>
             </div>
         </a>
+        <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
 
-        <!-- カード3: コネクテッド4 -->
+        <!-- 5つ目以降の画像には loading="lazy" を残し、拡張子を .webp に変更 -->
         <a href="https://core-calmdust.github.io/aicoding/connect4.html" class="game-card">
-            <img src="./images/connect4.png" alt="コネクテッド4の画像" loading="lazy" decoding="async">
+            <img src="./images/connect4.webp" alt="コネクテッド4の画像" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>コネクテッド4</h2>
             </div>
         </a>
 
-        <!-- カード4: さめが〜め -->
         <a href="https://core-calmdust.github.io/aicoding/samegame/" class="game-card">
-            <img src="./images/samegame.png" alt="さめが〜め" loading="lazy" decoding="async">
+            <img src="./images/samegame.webp" alt="さめが〜め" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>さめが〜め</h2>
             </div>
         </a>
 
-        <!-- カード5: 無限数独 -->
         <a href="https://core-calmdust.github.io/aicoding/sudoku/" class="game-card">
-            <img src="./images/sudoku.png" alt="無限数独" loading="lazy" decoding="async">
+            <img src="./images/sudoku.webp" alt="無限数独" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>無限数独</h2>
             </div>
         </a>
 
-        <!-- カード6: チェッカー -->
         <a href="https://core-calmdust.github.io/aicoding/checker.html" class="game-card">
-            <img src="./images/checker.png" alt="チェッカー" loading="lazy" decoding="async">
+            <img src="./images/checker.webp" alt="チェッカー" loading="lazy" decoding="async">
             <div class="card-content">
                 <h2>チェッカー</h2>
             </div>
